.tanzu/config/httproute.yml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: todo-ui
  annotations:
    healthcheck.gslb.tanzu.vmware.com/service: todo-ui
    healthcheck.gslb.tanzu.vmware.com/path: /
    healthcheck.gslb.tanzu.vmware.com/port: "8080"
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: default-gateway
    sectionName: http-todo-ui
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: todo-ui
      port: 8080
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
